objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__Promote_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, a promotion and deployment of this User Story will be started.</inlineHelpText>
        <label>Promote and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_as_Single_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote as Single Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Test_Level__c</fullName>
        <description>Test Level to apply in the deployment of the User Story.</description>
        <inlineHelpText>Test Level to apply in the deployment of the User Story.</inlineHelpText>
        <label>Promotion Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                    <default>true</default>
                    <label>NoTestRun</label>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Pull_Requests_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Requests Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__QR_Code__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=&apos;+
  SUBSTITUTE(LEFT($Api.Partner_Server_URL_310, 
    FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)
  )+Id, 
    &apos;https://&apos;, 
    &apos;https%3A%2F%2F&apos;
  ),
&apos;Scan the QR code to create contact in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product version or release where this User Story will be released.</description>
        <inlineHelpText>Product version or release where this User Story will be released.</inlineHelpText>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint where the User Story is planned.</description>
        <inlineHelpText>Sprint where the User Story is planned.</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>Current status of the implementation of the User Story.</description>
        <inlineHelpText>Current status of the implementation of the User Story.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Backburner</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>TO DO</fullName>
                </value>
                <value>
                    <fullName>DONE</fullName>
                </value>
                <value>
                    <fullName>SELECTED FOR DEVELOPMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Stop_Indexing_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</description>
        <inlineHelpText>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</inlineHelpText>
        <label>Exclude from Overlap Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_Other__c</fullName>
        <label>Planned Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_SFDC__c</fullName>
        <label>Actual Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team which will tackle the User Story.</description>
        <inlineHelpText>Team which will tackle the User Story.</inlineHelpText>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
        <inlineHelpText>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within</inlineHelpText>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Actual_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c + copado__Actual_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Actual Points and Actual Points Other. Use this field along with Actual Points Other if you need to split your User Story effort among different scopes.</inlineHelpText>
        <label>Total Actual Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_Other__c + copado__Planned_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Planned Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__US_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		IF(
		AND(
			NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	)
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Connect_log__c</fullName>
        <label>Connect log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadoconnect__Last_Synced_Date__c</fullName>
        <label>Last Synced Date</label>
        <type>DateTime</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>copado__Environment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Last_Promotion_Date__c</columns>
        <columns>copado__Latest_Commit_Date__c</columns>
        <columns>copado__Metadata_Types_in_Selection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>copado__Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Cli Listview</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>HOTFIX</fullName>
        <active>true</active>
        <label>HOTFIX</label>
    </recordTypes>
    <recordTypes>
        <fullName>UAT</fullName>
        <active>true</active>
        <label>UAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story_FSC</fullName>
        <active>true</active>
        <label>User Story FSC</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Utility</fullName>
        <active>true</active>
        <label>Utility</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Deployment_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
        OR(
                AND(
                PRIORVALUE(copado__Promote_Change__c) = false,
                copado__Promote_Change__c = true
                ),
                AND(
                PRIORVALUE(copado__Promote_and_Deploy__c) = false,
                copado__Promote_and_Deploy__c = true
                )
        ),
        OR(
                Latest_PMD_Scan_Required__c = true,
                copado__Pull_Requests_Approved__c = False,
                Highest_Priority_Violation__c = 1,
                Highest_Priority_Violation__c = 2
                
        )
)</errorConditionFormula>
        <errorMessage>Story doesn&apos;t meet the Required Quality Checks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Justification_for_Code_Coverage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(copado__Minimum_Apex_Code_Coverage__c &lt; 0.95, ISBLANK( Justification_for_Coverage__c ) )</errorConditionFormula>
        <errorDisplayField>Justification_for_Coverage__c</errorDisplayField>
        <errorMessage>Justification shouldn&apos;t be blank if coverage is less than 95%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Justification_for_PMD_Exception</fullName>
        <active>true</active>
        <errorConditionFormula>AND( PMD_Exception_Provided__c =True, ISBLANK(  Justification_for_PMD_Violations__c ) )</errorConditionFormula>
        <errorDisplayField>Justification_for_PMD_Violations__c</errorDisplayField>
        <errorMessage>Provide a justification for PMD exception</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMD_Scan</fullName>
        <active>false</active>
        <description>To check if the story requires a PMD Scan.</description>
        <errorConditionFormula>AND(
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
OR(
Latest_PMD_Scan_Required__c = true
)
)</errorConditionFormula>
        <errorDisplayField>Latest_PMD_Scan_Required__c</errorDisplayField>
        <errorMessage>Please perform a PMD Scan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_Violation_Check</fullName>
        <active>false</active>
        <description>To check the highest priority violations.</description>
        <errorConditionFormula>AND(
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
AND(PMD_Exception_Provided__c= false,
OR(
Highest_Priority_Violation__c = 1,
Highest_Priority_Violation__c = 2
))
)</errorConditionFormula>
        <errorDisplayField>Highest_Priority_Violation__c</errorDisplayField>
        <errorMessage>Resolve the P1 &amp; P2 Violations.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pull_Request</fullName>
        <active>false</active>
        <description>Validation Rule to check the Pull Request Approval.</description>
        <errorConditionFormula>AND(
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
OR(
copado__Pull_Requests_Approved__c = False
)
)</errorConditionFormula>
        <errorDisplayField>copado__Pull_Requests_Approved__c</errorDisplayField>
        <errorMessage>Pull Request Approval is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Story_MEtadta_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Test_Checkobox__c</errorConditionFormula>
        <errorMessage>You cannot deploy to higher environment because your stoy has conflicted metadata</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Percentage_Check</fullName>
        <active>false</active>
        <errorConditionFormula>copado__Minimum_Apex_Code_Coverage__c &lt; 0.88</errorConditionFormula>
        <errorDisplayField>copado__Minimum_Apex_Code_Coverage__c</errorDisplayField>
        <errorMessage>Minimum Percentage cannot be below 88</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__CredentialsMustBelongToTheEnvironment</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ( ISBLANK(copado__Environment__c) ) &amp;&amp;
NOT ( ISBLANK(copado__Org_Credential__c) ) &amp;&amp;
copado__Environment__c != copado__Org_Credential__r.copado__Environment__c</errorConditionFormula>
        <errorMessage>The credential must belong to the environment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Excluded_User_Stories_Not_Promotable</fullName>
        <active>true</active>
        <description>If &apos;Excluded from CBM&apos; is enable, the user story can not be mark as &quot;Ready To Promote&quot; or &quot;Promote &amp; Deploy&quot;</description>
        <errorConditionFormula>IF(
  AND(NOT(ISBLANK(copado__Platform__c)), copado__Platform__c != &apos;Salesforce&apos;), 
  (IF(AND(copado__Exclude_From_CBM__c, OR(copado__Promote_Change__c, copado__Promote_and_Deploy__c)), TRUE, FALSE)),
  FALSE
)</errorConditionFormula>
        <errorMessage>You cannot enable the &quot;Ready to Promote&quot; or the &quot;Promote &amp; Deploy&quot; options because the &quot;Exclude from Pipeline&quot; option is enabled. Please disable this option first and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>true</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__User_Story_Progress_Range_Validation</fullName>
        <active>true</active>
        <description>If User Story has Progress%, it should be in a valid range of 0 to 100.</description>
        <errorConditionFormula>NOT(ISNULL( copado__Progress__c )) &amp;&amp; (copado__Progress__c &lt; 0 || copado__Progress__c &gt; 1)</errorConditionFormula>
        <errorMessage>Enter a value between 0 to 100 to specify the Progress in percentage.</errorMessage>
    </validationRules>
</CustomObject>